# ve

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  Makefile.in  MeetingLog.md  PackageInfo.g  README.md  cmake_install.cmake  init.g  makedoc.g  read.g
.github/workflows/: cmake-multi-platform.yml
CMake/: findGMP.cmake
cmake/: FindGMP.cmake
lib/: files.gd  files.gi
src/: alloca.c  allocs.c  coin.c  comline.c  global.c  global.h  ilatt.h  input.y  inputfun.c  latt.h  lattice.c  me.c  meint.h  memain.c  myalloc.c  myalloc.h  out.c  pack.c  push.c  qinput.c  scanner.c  scrut.c  ve.cc  vector.c
src/int/: CMakeLists.txt  Makefile  cmake_install.cmake
src/rat/: CMakeLists.txt  Makefile  cmake_install.cmake
src/ve/: CMakeLists.txt  Makefile  cmake_install.cmake
tst/: testall.g
